--- a/test/environment.html
+++ b/test/environment.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fi-is environment tests</title>
   <style>
     body {
@@ -58,7 +59,7 @@
     /* Method names to check for */
     var tests = [
       /* Browsers */
-      'chrome', 'firefox', 'edge', 'ie', 'opera', 'safari',
+      'chrome', 'firefox', 'edge', 'ie', 'opera', 'safari', 'vivaldi',
       /* Devices */
       'iphone', 'ipad', 'ipod', 'androidPhone', 'androidTablet', 'desktop',
       'windowsPhone', 'windowsTablet', 'mobile', 'tablet', 'touchDevice',
