--- a/test/environment.html
+++ b/test/environment.html
@@ -77,6 +77,7 @@
       var th = document.createElement('th');
       var td = document.createElement('td');
 
+      th.id = tests[i];
       th.innerHTML = tests[i];
       td.innerHTML = is[tests[i]]();
       td.className = td.innerHTML;
