--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Documentation</h3>
 
 <ul>
-<li><a href="docs/index.md">API</a></li>
-<li><a href="docs/arithmetic.md">Arithmetic checks</a></li>
-<li><a href="docs/array.md">Array checks</a></li>
-<li><a href="docs/environment.md">Environment checks</a></li>
-<li><a href="docs/object.md">Object checks</a></li>
-<li><a href="docs/presence.md">Presence checks</a></li>
-<li><a href="docs/regexp.md">RegExp checks</a></li>
-<li><a href="docs/string.md">String checks</a></li>
-<li><a href="docs/time.md">Time checks</a></li>
-<li><a href="docs/type.md">Type checks</a></li>
+<li><a href="https://github.com/FinalDevStudio/fi-is/docs/index.md">API</a></li>
+<li><a href="https://github.com/FinalDevStudio/fi-is/docs/docs/arithmetic.md">Arithmetic checks</a></li>
+<li><a href="https://github.com/FinalDevStudio/fi-is/docs/docs/array.md">Array checks</a></li>
+<li><a href="https://github.com/FinalDevStudio/fi-is/docs/docs/environment.md">Environment checks</a></li>
+<li><a href="https://github.com/FinalDevStudio/fi-is/docs/docs/object.md">Object checks</a></li>
+<li><a href="https://github.com/FinalDevStudio/fi-is/docs/docs/presence.md">Presence checks</a></li>
+<li><a href="https://github.com/FinalDevStudio/fi-is/docs/docs/regexp.md">RegExp checks</a></li>
+<li><a href="https://github.com/FinalDevStudio/fi-is/docs/docs/string.md">String checks</a></li>
+<li><a href="https://github.com/FinalDevStudio/fi-is/docs/docs/time.md">Time checks</a></li>
+<li><a href="https://github.com/FinalDevStudio/fi-is/docs/docs/type.md">Type checks</a></li>
 </ul>
 
 <h3>
