Improved environment test page

--- a/test/environment.html
+++ b/test/environment.html
@@ -44,7 +44,7 @@
     <code id="ua"></code>
   </pre>
 
-  <strong>Detected user agent</string>
+  <strong>Detected application version</string>
   <pre>
     <code id="av"></code>
   </pre>
