Improved environment test page

--- a/test/environment.html
+++ b/test/environment.html
@@ -31,6 +31,14 @@
     td.true {
       color: green;
     }
+
+    pre {
+      background-color: #aaa;
+    }
+
+    pre code {
+      font-weight: normal;
+    }
   </style>
 </head>
 
