Improved environment test page

--- a/test/environment.html
+++ b/test/environment.html
@@ -32,12 +32,10 @@
       color: green;
     }
 
-    pre {
-      background-color: #aaa;
-    }
-
     pre code {
+      background-color: #aaa;
       font-weight: normal;
+      padding: 0.5em;
     }
   </style>
 </head>
