Improved environment test page

--- a/test/environment.html
+++ b/test/environment.html
@@ -33,7 +33,7 @@
     }
 
     pre code {
-      background-color: #aaa;
+      background-color: #eee;
       font-weight: normal;
       padding: 0.5em;
     }
