Improved environment test page

--- a/test/environment.html
+++ b/test/environment.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fi-is environment tests</title>
-  <style>
+  <style type="text/css">
     body {
       font-family: monospace;
     }
