Improved environment test page

--- a/test/environment.html
+++ b/test/environment.html
@@ -35,7 +35,7 @@
     pre code {
       background-color: #eee;
       font-weight: normal;
-      padding: 0.5em;
+      padding: 0.5em 1em;
     }
   </style>
 </head>
