--- a/test/environment.html
+++ b/test/environment.html
@@ -82,6 +82,7 @@
     var tests = [
       /* Browsers */
       'chrome', 'firefox', 'edge', 'ie', 'opera', 'safari', 'vivaldi',
+      'twitter', 'facebook',
       /* Devices */
       'iphone', 'ipad', 'ipod', 'androidPhone', 'androidTablet', 'desktop',
       'windowsPhone', 'windowsTablet', 'mobile', 'tablet', 'touchDevice',
