--- a/test/environment.html
+++ b/test/environment.html
@@ -42,15 +42,16 @@
 
 <body>
   <p>
-    This page is meant to be opened on each different browser and devices and check if the log results are accurate.
+    This page is meant to be opened on each different browser and devices and
+    check if the log results are accurate.
   </p>
 
-  <strong>Detected user agent</string>
+  <strong>Detected user agent</strong>
   <pre>
     <code id="ua"></code>
   </pre>
 
-  <strong>Detected application version</string>
+  <strong>Detected application version</strong>
   <pre>
     <code id="av"></code>
   </pre>
